// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button button with ref 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`button lbutton with to 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-text"
    href="/page2"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</DocumentFragment>
`;

exports[`button should be rendered correctly 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
